cluster/infra/longhorn-system/longhorn-ingress.yaml
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: longhorn-ingress
#   namespace: longhorn-system
# spec:
#   tls:
#   - secretName: longhorn-elwert-cloud-tls
#     hosts:
#     - longhorn.elwert.cloud
#   rules:
#   - host: "longhorn.elwert.cloud"
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: longhorn-frontend
#             port:
#               number: 80

# ---
# # TODO: make sure this is protected by... something.
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  routes:
    - match: Host(`longhorn.elwert.cloud`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-elwert-cloud-tls
